# guriaphoto

./: .gitignore  README.md  dapper-sauteeing-kitten.md  feature-list.md  pyproject.toml
.github/workflows/: build-windows.yml
installer/: kodak.iss
src/: main.py
src/kodak/: __init__.py  access.py  backup.py  clock.py  config.py  db.py  event_log.py  main.py  session_lock.py
src/kodak/models/: __init__.py  cash.py  credit.py  enums.py  price_history.py  product.py  product_status_history.py  setting.py  stock.py  transaction.py  user.py
src/kodak/services/: __init__.py  auth.py  cash.py  credits.py  dashboard.py  export.py  history.py  pricing.py  products.py  report.py  seed.py  transactions.py
src/kodak/ui/: __init__.py  cash_view.py  conflict_dialog.py  credits_view.py  dashboard_view.py  geo.py  login.py  products_view.py  report_view.py  settings_view.py  shell.py  theme.py  today_view.py  transaction_form.py
tools/: make_icon.py
