[project]
name = "kodak"
version = "0.1.0"
description = "Guriaphoto Kodak — photo studio management app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Pinned to the dev version so `flet build` uses a matching Flutter
    # template and produces reproducible bundles across machines / CI.
    "flet==0.84.*",
    "openpyxl>=3.1.5",
    "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    # Used only by tools/make_icon.py to (re)generate assets/icon.png.
    "pillow>=10.0.0",
]

[project.scripts]
kodak = "kodak.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kodak"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ────────── flet build configuration ──────────
# Used by `flet build macos` to populate Info.plist, app name, and bundle id.
[tool.flet]
org      = "com.guriaphoto"
product  = "Kodak"
company  = "Guriaphoto"
copyright = "Copyright (C) 2026 Guriaphoto"

[tool.flet.app]
path = "src/kodak/main.py"
